--- a/index.html
+++ b/index.html
@@ -264,55 +264,55 @@
   <!-- Feedback Buttons -->
   <div class="button-container">
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="⛔ Server offline" onclick="sendDirect(this, 'Server offline')">Server offline</button>
+      <button class="feedback-btn" data-orig="⛔ Server offline" onclick="sendDirect(this, '⛔ Server offline')">⛔ Server offline</button>
       <button class="note-btn" onclick="openModal('Server offline')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="🔐 Anmeldung nicht möglich" onclick="sendDirect(this, 'Anmeldung nicht möglich')">Anmeldung nicht möglich</button>
+      <button class="feedback-btn" data-orig="🔐 Anmeldung nicht möglich" onclick="sendDirect(this, '🔐 Anmeldung nicht möglich')">🔐 Anmeldung nicht möglich</button>
       <button class="note-btn" onclick="openModal('Anmeldung nicht möglich')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="⏹️ Stream startet nicht" onclick="sendDirect(this, 'Stream startet nicht')">Stream startet nicht</button>
+      <button class="feedback-btn" data-orig="⏹️ Stream startet nicht" onclick="sendDirect(this, '⏹️ Stream startet nicht')">⏹️ Stream startet nicht</button>
       <button class="note-btn" onclick="openModal('Stream startet nicht')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="🐌 Stream ruckelt" onclick="sendDirect(this, 'Stream ruckelt')">Stream ruckelt</button>
+      <button class="feedback-btn" data-orig="🐌 Stream ruckelt" onclick="sendDirect(this, '🐌 Stream ruckelt')">🐌 Stream ruckelt</button>
       <button class="note-btn" onclick="openModal('Stream ruckelt')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="⏸️ Stream stoppt an bestimmter Stelle" onclick="sendDirect(this, 'Stream stoppt an bestimmter Stelle')">Stream stoppt an bestimmter Stelle</button>
+      <button class="feedback-btn" data-orig="⏸️ Stream stoppt an bestimmter Stelle" onclick="sendDirect(this, '⏸️ Stream stoppt an bestimmter Stelle')">⏸️ Stream stoppt an bestimmter Stelle</button>
       <button class="note-btn" onclick="openModal('Stream stoppt an bestimmter Stelle')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="🔇 Kein Ton vorhanden" onclick="sendDirect(this, 'Kein Ton vorhanden')">Kein Ton vorhanden</button>
+      <button class="feedback-btn" data-orig="🔇 Kein Ton vorhanden" onclick="sendDirect(this, '🔇 Kein Ton vorhanden')">🔇 Kein Ton vorhanden</button>
       <button class="note-btn" onclick="openModal('Kein Ton vorhanden')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="📺✖️🔊 Ton und Bild nicht synchron" onclick="sendDirect(this, 'Ton und Bild nicht synchron')">Ton und Bild nicht synchron</button>
+      <button class="feedback-btn" data-orig="📺✖️🔊 Ton und Bild nicht synchron" onclick="sendDirect(this, '📺✖️🔊 Ton und Bild nicht synchron')">📺✖️🔊 Ton und Bild nicht synchron</button>
       <button class="note-btn" onclick="openModal('Ton und Bild nicht synchron')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="🔈✖️ Originaltonspur fehlt" onclick="sendDirect(this, 'Originaltonspur fehlt')">Originaltonspur fehlt</button>
+      <button class="feedback-btn" data-orig="🔈✖️ Originaltonspur fehlt" onclick="sendDirect(this, '🔈✖️ Originaltonspur fehlt')">🔈✖️ Originaltonspur fehlt</button>
       <button class="note-btn" onclick="openModal('Originaltonspur fehlt')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="📃✖️ Untertitel fehlen" onclick="sendDirect(this, 'Untertitel fehlen')">Untertitel fehlen</button>
+      <button class="feedback-btn" data-orig="📃✖️ Untertitel fehlen" onclick="sendDirect(this, '📃✖️ Untertitel fehlen')">📃✖️ Untertitel fehlen</button>
       <button class="note-btn" onclick="openModal('Untertitel fehlen')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="⏳ Untertitel nicht synchron" onclick="sendDirect(this, 'Untertitel nicht synchron')">Untertitel nicht synchron</button>
+      <button class="feedback-btn" data-orig="⏳ Untertitel nicht synchron" onclick="sendDirect(this, '⏳ Untertitel nicht synchron')">⏳ Untertitel nicht synchron</button>
       <button class="note-btn" onclick="openModal('Untertitel nicht synchron')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="👾 Bildqualität schlecht (kein HD)" onclick="sendDirect(this, 'Bildqualität schlecht (kein HD)')">Bildqualität schlecht (kein HD)</button>
+      <button class="feedback-btn" data-orig="👾 Bildqualität schlecht (kein HD)" onclick="sendDirect(this, '👾 Bildqualität schlecht (kein HD)')">👾 Bildqualität schlecht (kein HD)</button>
       <button class="note-btn" onclick="openModal('Bildqualität schlecht (kein HD)')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="🔀 Falscher Film/Serie wird abgespielt" onclick="sendDirect(this, 'Falscher Film/Serie wird abgespielt')">Falscher Film/Serie wird abgespielt</button>
+      <button class="feedback-btn" data-orig="🔀 Falscher Film/Serie wird abgespielt" onclick="sendDirect(this, '🔀 Falscher Film/Serie wird abgespielt')">🔀 Falscher Film/Serie wird abgespielt</button>
       <button class="note-btn" onclick="openModal('Falscher Film/Serie wird abgespielt')">📝</button>
     </div>
     <div class="btn-row">
-      <button class="feedback-btn" data-orig="💥 App stürzt ab" onclick="sendDirect(this, 'App stürzt ab')">App stürzt ab</button>
+      <button class="feedback-btn" data-orig="💥 App stürzt ab" onclick="sendDirect(this, '💥 App stürzt ab')">💥 App stürzt ab</button>
       <button class="note-btn" onclick="openModal('App stürzt ab')">📝</button>
     </div>
   </div>
@@ -335,7 +335,7 @@
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Ich kann mich nicht anmelden</summary>
+      <summary><span class="chev">▶</span> Ich kann mich nicht anmelden</summary>
       <div class="faq-answer">
         1. <b>Richtiges Passwort?</b> Groß-/Kleinschreibung beachten.<br>
         2. <b>Anderes Gerät angemeldet?</b> Oft kommt die Meldung „Keine Berechtigung“. Auf dem anderen Gerät abmelden → nur 1 Sitzung erlaubt.<br>
@@ -344,7 +344,7 @@
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Ich finde den Film/die Serie nicht</summary>
+      <summary><span class="chev">▶</span> Ich finde den Film/die Serie nicht</summary>
       <div class="faq-answer">
         1. <b>Schreibweise prüfen:</b> Genau eingeben, keine Leerzeichen vorne/hinten. Jellyfin kennt deutsche & englische Titel. Achtung: Umlaute (ä, ö, ü) manchmal problematisch → anderes Wort aus dem Titel nutzen.<br>
         2. <b>Nicht vorhanden?</b> → Als Wunsch an den Admin schicken.
@@ -352,7 +352,7 @@
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Ich kann das Intro nicht überspringen</summary>
+      <summary><span class="chev">▶</span> Ich kann das Intro nicht überspringen</summary>
       <div class="faq-answer">
         1. Button „Intro überspringen“ erscheint (bei Android TV: Kreis mit „überspringen“). Darauf klicken.<br>
         → Intro-Skip wird automatisch generiert – nicht immer perfekt. Alternativ: selbst vorspulen.
@@ -360,7 +360,7 @@
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Der Film startet nicht</summary>
+      <summary><span class="chev">▶</span> Der Film startet nicht</summary>
       <div class="faq-answer">
         1. <b>Geduld:</b> Besonders 4K-Filme brauchen bis zu 5 Min. Vorlaufzeit.<br>
         2. Jellyfin neu starten oder hier Server-Speed/Load prüfen.
@@ -368,7 +368,7 @@
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Fehlermeldung: „Nicht kompatibel mit Client/Abspielgerät“</summary>
+      <summary><span class="chev">▶</span> Fehlermeldung: „Nicht kompatibel mit Client/Abspielgerät“</summary>
       <div class="faq-answer">
         1. Meist irreführend → Film hat zu lange geladen. Prüfe deine Internetgeschwindigkeit (Speedtest > 20 Mbit/s Download).<br>
         2. Film neu laden.<br>
@@ -378,28 +378,28 @@
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Fehlermeldung: „Kann nicht wiedergegeben werden“</summary>
+      <summary><span class="chev">▶</span> Fehlermeldung: „Kann nicht wiedergegeben werden“</summary>
       <div class="faq-answer">
         1. Serverseitig: Externe Festplatte nicht erkannt → Admin kontaktieren.
       </div>
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Ich sehe keine Sammlungen (Klick auf Sammlung → nichts)</summary>
+      <summary><span class="chev">▶</span> Ich sehe keine Sammlungen (Klick auf Sammlung → nichts)</summary>
       <div class="faq-answer">
         Sammlungen laden bis zu 15 Sek. → Geduld. Nach 30 Sek. nichts? Seite neu laden. Sonst: Admin kontaktieren.
       </div>
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Die Startseite lädt nicht mehr</summary>
+      <summary><span class="chev">▶</span> Die Startseite lädt nicht mehr</summary>
       <div class="faq-answer">
         App komplett neu installieren.
       </div>
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Wo finde ich die Apps?</summary>
+      <summary><span class="chev">▶</span> Wo finde ich die Apps?</summary>
       <div class="faq-answer">
         • Smart TV: App Store → „Jellyfin“<br>
         • Android / iOS: Play Store / App Store → „Jellyfin“<br>
@@ -410,7 +410,7 @@
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Wie melde ich mich an?</summary>
+      <summary><span class="chev">▶</span> Wie melde ich mich an?</summary>
       <div class="faq-answer">
         1. Jellyfin-App auf TV, Tablet oder Fire TV Stick installieren. PC/Smartphone: Browser möglich.<br>
         2. Server eingeben:<br>
@@ -423,7 +423,7 @@
     </details>
 
     <details class="faq-item">
-      <summary><span class="chev">➡️</span> Der Server ist offline – ich kann mich nicht verbinden</summary>
+      <summary><span class="chev">▶</span> Der Server ist offline – ich kann mich nicht verbinden</summary>
       <div class="faq-answer">
         1. <b>VPN aus?</b> Nur in Deutschland & Spanien erlaubt.<br>
         2. Zur vollen Stunde: VPN-Check → bis zu 15 Min. offline. Status hier prüfen.<br>
