--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
   </div>
 
   <script>
-    emailjs.init({ publicKey: "E4jHB9-hSCQJ6EUf" });
+    emailjs.init({ publicKey: "E4jHB9-hSCQJ6yEUf" });
     const API_BASE = "https://fritflix.dedyn.io:33420/api";
     const SPEEDTEST_TOKEN = "fhe9wzr83ezrw7ft72636770pueu9uft";
     const OFFLINE_THRESHOLD_MS = 15 * 60 * 1000;
